# cookiecutter-custom-template

./: .gitignore  LICENSE  Makefile  README.md  cookiecutter.json  pyvenv.cfg  requirements.txt  settings.mk  setup.py
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .coveragerc  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  manage.py  pyproject.toml  requirements.txt  settings.mk  setup.cfg  setup.py
{{cookiecutter.project_slug}}/app/: main.py
{{cookiecutter.project_slug}}/app/api/v1/: router.py
{{cookiecutter.project_slug}}/app/api/vi1/: health.py
{{cookiecutter.project_slug}}/app/core/: config.py  exceptions.py  extensions.py
{{cookiecutter.project_slug}}/app/core/commands/: __init__.py  hello.py
{{cookiecutter.project_slug}}/docker-compose/: Dockerfile  docker-compose.yml
{{cookiecutter.project_slug}}/tests/: __init__.py  test_health.py  test_{{cookiecutter.project_slug}}.py
